# mlopsproj

./: README.md  cloudbuild.yaml  data.dvc  iris_classifier.py  model.pth  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  small.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: model.pth
src/project/: train.py  visualize.py
tests/: test_data.py  test_model.py
wandb/run-20250109_111653-52b8gh6z/: run-52b8gh6z.wandb
wandb/run-20250109_111653-52b8gh6z/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250109_111923-rn91ivra/: run-rn91ivra.wandb
wandb/run-20250109_111923-rn91ivra/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250109_112330-p2fxgh0c/: run-p2fxgh0c.wandb
wandb/run-20250109_112330-p2fxgh0c/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250109_112529-feln5fxk/: run-feln5fxk.wandb
wandb/run-20250109_112529-feln5fxk/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250109_112830-hrag3mbg/: run-hrag3mbg.wandb
wandb/run-20250109_112830-hrag3mbg/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250109_112945-cb8zyz8b/: run-cb8zyz8b.wandb
wandb/run-20250109_112945-cb8zyz8b/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250109_113710-3a1qu0ws/: run-3a1qu0ws.wandb
wandb/run-20250109_113710-3a1qu0ws/files/: wandb-metadata.json  wandb-summary.json
