[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
description = "awesome project"
authors = [
  { name = "evita", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "project.train:train"
evaluate = "project.evaluate:evaluate"
visualize = "project.visualize:visualize"
